Fixed spacing between video and boxes on home page

--- a/assets/less/laravel.less
+++ b/assets/less/laravel.less
@@ -92,6 +92,7 @@ header {
 	.screencast {
 		background: url(../img/bg-screencast.png) no-repeat right center;
 		position: relative;
+		margin-bottom: 36px;
 		.video {
 			background: url(../img/bg-screencast-holder.png) no-repeat;
 			height: 244px;
